--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,7 @@
 @import "header.css";
 @import "footer.css";
 @import "all.css";
+@import "root.css";
 
 main {
   position: relative;
@@ -15,7 +16,9 @@ main {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(146, 90, 209, 0.377);
+    backdrop-filter: blur(10px);
+    background-color: var(--principal-color);
+    opacity: 0.6;
     z-index: 0;
   }
   & section {
@@ -26,11 +29,32 @@ main {
     justify-content: center;
     gap: 2rem;
     z-index: 2;
+    height: auto;
     & p {
       color: white;
       width: 60%;
       flex: 1;
       flex-basis: 200;
+    }
+    & .shadow {
+      box-shadow: 0 10px 10px rgba(0, 0, 0, 0.404);
+    }
+    & .tabela-content {
+      min-width: 100%;
+      height: auto;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      flex-direction: column;
+      color: white;
+      padding: 40px 80px;
+      gap: 2rem;
+      background-color: var(--principal-color);
+      & p {
+        width: 100%;
+      }
     }
     & div {
       flex: 1 1 100px;
@@ -38,7 +62,6 @@ main {
       max-width: 600px;
       min-width: 400px;
       border-radius: 20px;
-      box-shadow: 0 10px 10px rgba(0, 0, 0, 0.404);
       height: 280px;
       flex-basis: 200;
       background-size: cover;
