--- a/public/css/weather.css
+++ b/public/css/weather.css
@@ -1,6 +1,7 @@
 @import "header.css";
 @import "footer.css";
 @import "all.css";
+@import "root.css";
 
 main {
   height: 90svh;
@@ -16,7 +17,9 @@ main {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(146, 90, 209, 0.377);
+    backdrop-filter: blur(10px);
+    background-color: var(--principal-color);
+    opacity: 0.6;
     z-index: 0;
   }
   & section {
@@ -38,7 +41,7 @@ main {
       align-items: center;
       justify-content: center;
       gap: 2rem;
-      background-color: rgba(96, 41, 158, 0.301);
+      background-color: var(--second-color-transparent);
       width: 400px;
       backdrop-filter: blur(6px) saturate(0%);
       & form {
